--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="wrapper">
                 <div class="calculator__inner">
                     <div class="calculator__input-inner">
-                        <input class="calculator__input" type="text" disabled>
+                        <input maxlength="10" class="calculator__input" type="text" disabled>
                     </div>
 
                     <div class="calculator__buttons">
@@ -125,6 +125,6 @@
             </div>
         </div>
     </section>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
