--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
     <link rel="icon" href="./src/media/icons/favicon.svg" type="image/svg">
     <title>Document</title>
 </head>
@@ -175,7 +175,7 @@
             </div>
         </div>
     </section>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 </body>
 
 </html>
