--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                                     <span><sup><small>3</small></sup><span>&#8730;</span><span>x</span></span>
                                 </button>
                             </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__square-root">
+                                    <span>In</span>
+                                </button>
+                            </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__square-root">
+                                    <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
+                                </button>
+                            </div>
                         </div>
 
                         <div class="calculator__buttons">
