added calculateLog10 function

--- a/index.html
+++ b/index.html
@@ -72,15 +72,20 @@
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__square-root">
+                                <button class="calculator__btn calculator__num">
                                     <span>In</span>
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__log10">
+                                    <span>log<sub><small>10</small></sub></span>
+                                </button>
+                            </div>
+                            <!-- <div class="calculator__inner-btn">
                                 <button class="calculator__btn calculator__num calculator__square-root">
                                     <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="calculator__buttons">
