--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                                     <span>log<sub><small>10</small></sub></span>
                                 </button>
                             </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__log10">
+                                    <span>x!</span>
+                                </button>
+                            </div>
                             <!-- <div class="calculator__inner-btn">
                                 <button class="calculator__btn calculator__num calculator__square-root">
                                     <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
