added calculateCos function

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                                     <span>sin</span>
                                 </button>
                             </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__log10">
+                                    <span>cos</span>
+                                </button>
+                            </div>
                             <!-- <div class="calculator__inner-btn">
                                 <button class="calculator__btn calculator__num calculator__square-root">
                                     <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
