--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num">
+                                    <span>ln</span>
+                                </button>
+                            </div>
+                            <div class="calculator__inner-btn">
                                 <button class="calculator__btn calculator__num calculator__square-root">
                                     <span><sup><small>2</small></sup><span>&#8730;</span><span>x</span></span>
                                 </button>
@@ -72,40 +77,57 @@
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num">
-                                    <span>In</span>
+                                <button class="calculator__btn calculator__num calculator__square-root">
+                                    <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
                                 </button>
                             </div>
+                            
                             <div class="calculator__inner-btn">
                                 <button class="calculator__btn calculator__num calculator__log10">
                                     <span>log<sub><small>10</small></sub></span>
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__log10">
+                                <button class="calculator__btn calculator__num">
                                     <span>x!</span>
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__log10">
+                                <button class="calculator__btn calculator__num calculator__min-size">
                                     <span>sin</span>
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__log10">
+                                <button class="calculator__btn calculator__num calculator__min-size">
                                     <span>cos</span>
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__log10">
+                                <button class="calculator__btn calculator__num calculator__min-size">
                                     <span>tan</span>
                                 </button>
                             </div>
-                            <!-- <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__square-root">
-                                    <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__min-size">
+                                    <span>e</span>
                                 </button>
-                            </div> -->
+                            </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__min-size">
+                                    <span>sinh</span>
+                                </button>
+                            </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__min-size">
+                                    <span>cosh</span>
+                                </button>
+                            </div>
+                            <div class="calculator__inner-btn">
+                                <button class="calculator__btn calculator__num calculator__min-size">
+                                    <span>tanh</span>
+                                </button>
+                            </div>
+                            
                         </div>
 
                         <div class="calculator__buttons">
