--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <section class="calculator">
+        <div class="calculator__backgrond"></div>
         <div class="container">
             <div class="wrapper">
                 <div class="calculator__inner">
@@ -75,7 +76,8 @@
                                 </button>
                             </div>
                             <div class="calculator__inner-btn">
-                                <button class="calculator__btn calculator__num calculator__square-root">
+                                <button
+                                    class="calculator__btn calculator__num calculator__square-root calculator__signs-power">
                                     <span><sup><small>y</small></sup><span>&#8730;</span><span>x</span></span>
                                 </button>
                             </div>
